# LLMChessArena

./: README.md  install.sh  pyproject.toml
src/llmchessarena/: __init__.py  game.py
